Edit Contact: fix signature alignment (relative tr fix)

--- a/scss/civicrm/contact/pages/_new-individual.scss
+++ b/scss/civicrm/contact/pages/_new-individual.scss
@@ -114,6 +114,9 @@
     table-layout: fixed;
 
     tr {
+      // SYMBIOTIC For the .email-signature
+      position: relative;
+
       td {
         &:nth-child(2),
         &:nth-child(3),
